RESOLVED FIXED269435
Try to fix the iOS UnifiedPDF build after pasteboard changes
https://bugs.webkit.org/show_bug.cgi?id=269435
Summary Try to fix the iOS UnifiedPDF build after pasteboard changes
Tim Horton
Reported 2024-02-14 22:40:10 PST
Try to fix the iOS UnifiedPDF build after pasteboard changes
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-14 22:42:31 PST
Tim Horton
Comment 2 2024-02-14 22:43:01 PST
EWS
Comment 3 2024-02-14 22:47:20 PST
Committed 274700@main (1e514819de21): <https://commits.webkit.org/274700@main> Reviewed commits have been landed. Closing PR #24484 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.