Try to fix the iOS UnifiedPDF build after pasteboard changes https://bugs.webkit.org/show_bug.cgi?id=269435

Unreviewed speculative build fix.

* Source/WebKit/WebProcess/Plugins/PDF/UnifiedPDF/UnifiedPDFPlugin.mm:
(WebKit::UnifiedPDFPlugin::performCopyLinkOperation const):

Canonical link: https://commits.webkit.org/274700@main